fix various NPEs, load floor map in Main, add loadPaxMap in emptyliftAlloc